--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,19 @@ a:visited {
 .fg {
   color: #100f66
 }
+
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgb(68, 68 , 68);
+  min-height: 88vh;
+}
+.not-found h2 {
+  font-size: 55px;
+}
+
+.not-found p{
+font-size: 20px;
+}
