ft:(redux-persist)

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Sharp");
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+
+:root {
+  --color-primary: #7380ec;
+  --color-danger: #ff7782;
+  --color-success: #41f1b6;
+  --color-warning: #ffbb55;
+  --color-white: #fff;
+  --color-info-dark: #7d8da1;
+  --color-info-light: #dce1eb;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-primary-variant: #111e88;
+  --color-dark-variant: #677483;
+  --color-background: #f6f6f9;
+  --color-orange: #e66226;
+
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
+
+  --card-padding: 1.8rem;
+  --padding-1: 1.2rem;
+
+  --card-paddings: 2.7rem;
+  --paddings-1: 2rem;
+
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
 a {
     text-decoration: none;
 };
@@ -57,4 +90,143 @@ font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+
+
+.contacts {
+  position: relative;
+  min-height: 70vh;
+  padding: 50px 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: white;
+  width: 70%;
+  border-radius: 20px;
+
+}
+
+.contacts .content {
+  max-width: 500px;
+  text-align: center;
+ 
+}
+.contacts .content h2 {
+  font-size: 36px;
+  font-weight: 500;
+  color: var(--color-primary);
+}
+
+.contacts .content p {
+  font-weight: 500;
+}
+
+.containers {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.containers .contactInfo {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+ 
+}
+
+.containers .contactInfo .box {
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+}
+
+.containers .contactInfo .box .icon {
+  min-width: 60px;
+  height: 60px;
+  background: var(--color-success);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+  color: white;
+}
+
+.containers .contactInfo .box .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  flex-direction: column;
+  font-weight: 300;
+  color: black;
+}
+
+.containers .contactInfo .box .text h3 {
+  font-weight: 500;
+  color: var(--color-info-dark);
+}
+.contactForm {
+  width: 40%;
+  padding: 40px;
+  background: rgb(255, 255, 255);
+  border-radius: 20px;
+  margin-left: 20rem;
+}
+
+.contactForm h2 {
+  font-size: 30px;
+  color: #333;
+  font-weight: 500;
+}
+
+.contactForm .inputBox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.contactForm .inputBox input,
+.contactForm .inputBox textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 1px solid rgb(136, 131, 131);
+  outline: none;
+  resize: none;
+ 
+}
+
+.contactForm .inputBox span {
+  position: absolute;
+  left: 10px;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: #666;
+}
+.contactForm .inputBox input:focus ~ span,
+.contactForm .inputBox textarea:focus ~ span {
+  color: var(--color-danger);
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+
+.contactForm .inputBox input[type="submit"] {
+  width: 100px;
+  background: var(--color-primary);
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 20px;
 }
